7个简易页面

--- a/classify.html
+++ b/classify.html
@@ -24,102 +24,114 @@
 			<ul class="center_left">
 				<li>面部护肤
 					<div class="center_reght">
-						<a href="###" class="CR_img">
+						<a href="productList.html?p=1" class="CR_img">
 							<img src="img/classify/cr1.jpg"/>
 						</a>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
-					</div>
+						<div class="CR_list">
+							<a href="productList.html?p=1">
+								<img src="img/classify/l1.jpg"/>
+								<span>保湿面霜</span>
+							</a>
+						</div>
+						<div class="CR_list">
+							<a href="productList.html?p=1">
+								<img src="img/classify/l1.jpg"/>
+								<span>保湿面霜</span>
+							</a>
+						</div>
+						
 				</li>
 				<li>面部护肤
 					<div class="center_reght">
-						<a href="###" class="CR_img">
+						<a href="productList.html?p=1" class="CR_img">
 							<img src="img/classify/cr1.jpg"/>
 						</a>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
 						</div>
 						<div class="CR_list">
-							<a href="###">
+							<a href="productList.html?p=1">
 								<img src="img/classify/l1.jpg"/>
 								<span>保湿面霜</span>
 							</a>
