--- a/brand.html
+++ b/brand.html
@@ -120,4 +120,5 @@
 
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="js/swiper.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/better-scroll/dist/bscroll.min.js"></script>
 <script type="text/javascript" src="js/brand.js"></script>
